fix(ui): glowing with scrollbar and overflow-y: visible

--- a/assets/scss/_layouts.scss
+++ b/assets/scss/_layouts.scss
@@ -70,6 +70,11 @@
     }
 }
 
+.scroll-y {
+    overflow-y: auto;
+    padding: 0 20px 20px 20px;
+    margin: 0 -20px -20px -20px;
+}
 
 // --- 3-Breakpoint Col --- //
 
